--- a/sorveteria/src/App.css
+++ b/sorveteria/src/App.css
@@ -1,3 +1,12 @@
-.App {
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
 
+.limited-section {
+    max-width: 100vw;
+    margin: 0 auto;
 }
