--- a/sorveteria/src/Components/Header/style.css
+++ b/sorveteria/src/Components/Header/style.css
@@ -2,21 +2,74 @@ header {
     background-color: #f9db79;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     position: fixed;
     left: 0;
     right: 0;
     top: 0;
     z-index: 5;
+    padding: 0 10%;
 }
 
-header img{
+header img {
     height: 80px;
+}
+
+.navigation {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 36%;
 }
 
 .link-header {
     font-size: 20px;
     color: #1b1b1b;
-    padding-left: 5vw;
     font-weight: bold;
+}
+
+@media (max-width: 959px) {
+    .link-header {
+        margin-right: 20px;
+    }
+}
+
+@media (max-width: 615px) {
+    header {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-width: 100vw;
+    }
+
+    header img {
+        height: 100px;
+        border-bottom: solid 1px #1b1b1b;
+        margin-bottom: 20px;
+        padding: 0 30% 10px 30%
+    }
+
+    .navigation {
+        width: 100%;
+        padding-bottom: 10px;
+    }
+}
+
+@media (max-width: 425px) {
+    header img {
+        padding: 0 20% 20px 20%
+    }
+
+    .limited-section {
+        margin: 0;
+        
+    }
+
+    .navigation {
+        width: 100%;
+    }
+
+    .link-header {
+        font-size: 18px;
+    }
 }
