--- a/sorveteria/src/Components/Paginas/Home/style.css
+++ b/sorveteria/src/Components/Paginas/Home/style.css
@@ -1,4 +1,4 @@
-.banner-section {
+.home-banner-section {
     background-color: #f9db79;
     height: 100vh;
     display: flex;
@@ -11,7 +11,7 @@
     height: 70%;
 }
 
-.banner-section h1 {
+.home-banner-section h1 {
     max-width: 1000px;
     letter-spacing: 0.2em;
     color: #f0efec;
@@ -54,3 +54,91 @@
     padding: 0 20%;
 }
 
+@media (max-width: 968px) {
+    .img-section {
+        height: 50%;
+    }
+
+    .card h2 {
+        margin-bottom: 5px;
+        font-size: 1.5em;
+    }
+    
+    .card h3 {
+        margin: 0;
+        font-size: 1em;
+    }
+    
+    .card p {
+        padding: 0 10%;
+        font-size: 13px;
+    }
+}
+
+@media (max-width: 688px) {
+    .card h2 {
+        font-size: 1.2em;
+    }
+    
+    .card h3 {
+        margin: 0;
+        font-size: 1em;
+    }
+    
+    .card p {
+        padding: 0 10%;
+        font-size: 0.7em;
+    }
+}
+
+
+@media (max-width: 615px) {
+    .ice-cream-img {
+        height: 46%;
+    }
+    
+    .home-banner-section h1 {
+        font-size: 2em;
+        max-width: 100vw;
+    }
+}
+
+
+@media (max-width: 425px) {
+    .ice-cream-img {
+        height: 40%;
+    }
+
+    .home-banner-section h1 {
+        font-size: 1.5em;
+        max-width: 300px;
+    }
+
+    .limited-section {
+        margin: 0;
+    }
+
+    .flavor-section, .events-section, .about-section {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .img-section, .card {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .card p {
+        padding: 0 10% 20px 10%;
+        font-size: 0.9em;
+    }
+
+    .card {
+        margin: 5% 0;
+    }
+
+    header {
+        width: 100vw;
+    }
+
+}
