--- a/csgo-teams/src/App.css
+++ b/csgo-teams/src/App.css
@@ -3,3 +3,22 @@
   margin: 0;
   padding: 0;
 }
+
+.App {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.SectionApp {
+  width: 60vw;
+  height: 76vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgb(209, 210, 211);
+  border-radius: 14%;
+}
