--- a/csgo-teams/src/App.css
+++ b/csgo-teams/src/App.css
@@ -13,6 +13,7 @@
 }
 
 .SectionApp {
+  background-color: rgb(239, 239, 240);
   width: 60vw;
   height: 76vh;
   display: flex;
@@ -21,4 +22,13 @@
   justify-content: center;
   border: 1px solid rgb(209, 210, 211);
   border-radius: 14%;
+  box-shadow: 0px 0px 10px 10px rgb(232, 232, 233);
+}
+
+
+@media (max-width: 500px) {
+    .SectionApp {
+      height: 60vh;
+      width: 70vw;
+    }
 }
