--- a/csgo-teams/src/components/Header/style.css
+++ b/csgo-teams/src/components/Header/style.css
@@ -3,6 +3,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 header h1, p, button {
@@ -25,4 +26,23 @@ header button {
     padding: 10px;
     border-radius: 24px;
     border: none;
+    background-color: rgb(108, 158, 207);
+}
+
+header button:hover {
+    background-color: rgb(140, 181, 221);
+}
+
+@media (max-width: 500px) {
+    header h1 {
+        font-size: 1.4em;
+    }
+
+    header p {
+        font-size: 1em;
+    }
+
+    header button {
+        font-size: 1em;
+    }
 }
