--- a/mini-mundo/src/App.css
+++ b/mini-mundo/src/App.css
@@ -2,11 +2,10 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
+  box-sizing: border-box;
   font-family: 'Poppins', cursive;
 }
 
-.App {
-  text-align: center;
-}
+
 
 
