--- a/mini-mundo/src/components/Footer/style.css
+++ b/mini-mundo/src/components/Footer/style.css
@@ -32,3 +32,34 @@ footer p {
 .Rights span{
     color: #feb633;
 }
+
+@media (max-width: 768px) {
+    footer p {
+        font-size: 1em;
+        padding: 1em 14vw;
+    }
+
+    .Icons {
+        max-width: 60vw;
+    }
+    
+    .Icons img {
+        height: 40px;
+        margin: 1em 0.4em 1.4em 0.4em;
+    }
+}
+
+@media (max-width: 420px) {
+    footer p {
+        font-size: 1em;
+        padding: 1em 5vw;
+    }
+
+    .Icons {
+        max-width: 90vw;
+    }
+
+    .Icons img {
+        margin: 1em 0.5em 1.4em 0.5em;
+    }
+}
