--- a/mini-mundo/src/components/BannerSection/style.css
+++ b/mini-mundo/src/components/BannerSection/style.css
@@ -1,4 +1,4 @@
-.BannerSection {
+.BannerSectionLight {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -7,15 +7,15 @@
     background-color: #fafbfc;
 }
 
-.BannerImg {
+.BannerImgLight {
     background-image: url('../../../public/assets/banner.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: -190px;
 }
 
-.BannerImg, .BannerAbout {
-    width: 40vw;
+.BannerImgLight, .BannerAbout {
+    width: 50vw;
     height: 100vh;
 }
 
@@ -25,6 +25,8 @@
     align-items: flex-start;
     justify-content: center;
     color: #022144;
+    background-color: #fafbfc;
+    padding-left: 1em;
 }
 
 .BannerAbout p {
@@ -42,8 +44,31 @@
     font-weight: bold;
 }
 
+/*DARK MODE*/
+
+.BannerSectionDark {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    background-color: #252525;
+}
+
+.BannerImgDark {
+    background-image: url('../../../public/assets/banner.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: -190px;
+}
+
+.BannerImgDark {
+    width: 50vw;
+    height: 100vh;
+}
+
 @media (max-width: 768px) {
-    .BannerImg {
+    .BannerImgLight {
         display: none;
     }
 
@@ -51,6 +76,12 @@
         width: 100vw;
         padding-left: 20px;
         justify-content: center;
+    }
+
+    /*DARK MODE*/
+
+    .BannerImgDark {
+        display: none;
     }
 }
 
@@ -68,3 +99,4 @@
         font-size: 3em;
     }
 }
+
