--- a/my-csgo-grenades/src/components/MainSection/style.css
+++ b/my-csgo-grenades/src/components/MainSection/style.css
@@ -18,18 +18,19 @@
 
 .main-about h2, .main-about p {
     color: #ccccd2;
-    width: 50%;
 }
 
 .main-about h2 {
     font-size: 2.4em;
     padding: 0 5em;
     letter-spacing: 0.1em;
+    width: 50%;
 }
 
 .main-about p {
     font-size: 1.6em;
     padding: 0 5em;
+    width: 40%;
 }
 
 .card-map-main-section {
@@ -41,4 +42,51 @@
     align-items: center;
     justify-content: center;
     margin: 3em;
+}
+
+/*Responsive*/
+
+@media (max-width: 1450px) {
+    .main-about h2 {
+        font-size: 1.8em;
+        padding: 0 2em;
+    }
+
+    .main-about p {
+        font-size: 1.2em;
+        padding: 0 2em;
+    }
+}
+
+@media (max-width: 1080px) {
+    .main-about h2 {
+        font-size: 1.6em;
+    }
+
+    .main-about p {
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 768px) {
+    .main-about h2 {
+        font-size: 1.4em;
+    }
+
+    .main-about p {
+        font-size: .8em;
+    }
+}
+
+@media (max-width: 425px) {
+    .main-about h2 {
+        font-size: 1.2em;
+        padding: 0 5em;
+        width: 100%;
+    }
+
+    .main-about p {
+        font-size: .8em;
+        display: none;
+    }
 }
