--- a/my-csgo-grenades/src/components/MapBannerSection/style.css
+++ b/my-csgo-grenades/src/components/MapBannerSection/style.css
@@ -9,6 +9,8 @@
     height: 100%;
     left: 0;
     top: 0;
+    object-fit: cover;
+    object-position: center;
 }
 
 .name-logo-map {
@@ -27,6 +29,7 @@
     font-size: 5em;
     letter-spacing: 0.2em;
     text-align: center;
+    text-shadow: .05em .05em #010422;
 }
 
 .name-logo-map img {
