--- a/my-csgo-grenades/src/components/MapMainSection/style.css
+++ b/my-csgo-grenades/src/components/MapMainSection/style.css
@@ -1,5 +1,67 @@
 .map-main-section {
-    width: 100vw;
-    height: 100vh;
     background-color: #010422;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    gap: 2em;
+    padding-bottom: 10vh;
+}
+
+.grenade-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: calc(100vw/5);
+    height: 44vh;
+    border-radius: 20px;
+    background-color: #1a1d38;
+}
+
+.img-grenade {
+    height: 55%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1em;
+}
+
+.img-grenade img {
+    width: 100%;
+    border-radius: 5%;
+    border: 1px solid #c8b43a;
+    margin-top: 1em;
+}
+
+.infos-area h2, .infos p{
+    color: #ccccd2;
+}
+
+.infos-area {
+    height: 45%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding-left: 2em;
+}
+
+.grenade-infos {
+    display: flex;
+}
+
+.info {
+    display: flex;
+    align-items: center;
+    gap: 1em;
+}
+
+.circle {
+    width: 1em;
+    height: 1em;
+    background-color: #c8b43a;
+    border-radius: 50%;
 }
