--- a/my-csgo-grenades/src/components/MapMainSection/style.css
+++ b/my-csgo-grenades/src/components/MapMainSection/style.css
@@ -33,6 +33,7 @@
     border-radius: 5%;
     border: 2px solid #c8b43a;
     aspect-ratio: 16 / 9;
+    margin: .4em 0;
 }
 
 .infos-area h2, .infos p{
@@ -54,7 +55,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    padding-left: 1em;
+    padding: .4em 0 0 1.4em;
 }
 
 .grenade-infos {
