--- a/chart11/src/App.css
+++ b/chart11/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 * {
   margin: 0;
@@ -32,19 +33,21 @@
   top: 0;
   left: 10vw;
   background-color: #5e6073;
-  height: 7vh;
+  height: 6vh;
   width: 90vw;
 }
 
 .second-nav li {
   list-style: none;
   padding: .5em .5em;
-  font-size: 2em;
+  font-size: 1.6em;
   border: 1px solid #d8d9da;
 }
 
 .second-nav-li a{
   color: #d8d9da;
+  width: 100%;
+  height: 100%;
 }
 
 .second-nav li:hover {
