--- a/chart11/src/App.css
+++ b/chart11/src/App.css
@@ -3,6 +3,7 @@
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
+  background-color: #5e6073;
 }
 * {
   margin: 0;
@@ -17,7 +18,7 @@
 
 .images-section {
   width: 70vw;
-  margin: 10em 0 0 14em;
+  margin: 2em 0 0 14em;
 }
 
 .images-section img {
@@ -33,7 +34,7 @@
   top: 0;
   left: 10vw;
   background-color: #5e6073;
-  height: 6vh;
+  height: 5vh;
   width: 90vw;
 }
 
@@ -58,7 +59,8 @@
 }
 
 .second-nav li:hover {
-  background-color: #81949e;
+  background-color: #8d8da1;
+  transition: .4s;
 }
 
 .white-section {
