--- a/chart11/src/components/MainNav/style.css
+++ b/chart11/src/components/MainNav/style.css
@@ -32,7 +32,10 @@
     font-weight: bold;
 }
 
-.main-nav li:hover{
+.main-nav li:hover {
     background-color: #8d8da1;
     cursor: pointer;
+    transition: .4s;
 }
+
+
