--- a/chart11/src/components/MainNav/style.css
+++ b/chart11/src/components/MainNav/style.css
@@ -38,4 +38,16 @@
     transition: .4s;
 }
 
+.link-nav:hover {
+    color: #f7f7f7;
+}
 
+@media (max-width: 1200px) {
+    .main-nav {
+        width: 12vw;
+    }
+
+    .link-nav {
+        font-size: .9em;
+    }
+}
