--- a/my-csgo-grenades/src/components/GrenadeVideoSection/style.css
+++ b/my-csgo-grenades/src/components/GrenadeVideoSection/style.css
@@ -1,9 +1,9 @@
 .grenade-video-section {
     position: fixed;
-    width: 60vw;
-    height: 50vh;
-    top: 25%;
-    left: 25%;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
 }
 
 .video-area {
